Fixes flag img size issue on mobile for Currency IA

--- a/share/spice/currency/currency.css
+++ b/share/spice/currency/currency.css
@@ -205,6 +205,12 @@
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .flag_img {
+        width: 40px;
+    }
+}
+
 /* Mobile view */
 
 .is-mobile .tile--s {
